--- a/style.css
+++ b/style.css
@@ -11,10 +11,16 @@
     background-color: black;
 }
 
+.hp{
+    font-size: 90px;
+    color: wheat;
+    position: relative;
+}
+
 .box{
     width: 350px;
     height: 200px;
-    outline: 3px solid red;
+    /*outline: 3px solid red;*/
     position: relative;
     transform-style: preserve-3d;
     /*transform: rotateY(35deg);*/
@@ -36,7 +42,12 @@
     left: 0;
     height: 100%;
     width: 100%;
-    transform: rotateX(calc(var(--i) * 45deg)) translateZ(240px);
+    transform: rotateX(calc(var(--i) * 45deg)) translateZ(245px);
+}
+
+.box span:hover img{
+    border-radius: 30px;
+    scale: 1.3;
 }
 
 @keyframes animate{
