--- a/style.css
+++ b/style.css
@@ -3,12 +3,23 @@
     --view-angle: 1500;
 }
 
+body{
+    background-color: black;
+    min-height: 95vh;
+}
+
+h1{
+    color: white;
+    font-size: 35px;
+    text-align: center;
+    margin-top: 15px;
+}
+
 .outer-div{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: black;
+    min-height: 90vh;
 }
 
 .hp{
